jenkins/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: devops-tools    
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: jenkins/jenkins:latest-jdk11
        securityContext:
          runAsNonRoot: true
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          runAsUser: 11000
          runAsGroup: 12000
          fsGroup: 2000                
          capabilities:
            drop:
              - ALL
            add:
              - NET_BIND_SERVICE                  
        resources:
          limits:
            memory: "4Gi"
            cpu: "1000m"
          requests:
            memory: "2Gi"
            cpu: "500m"        
        ports:
        - containerPort: 8080
        volumeMounts:
            - name: jenkins-pv
              mountPath: /var/jenkins_home
      volumes:
        - name: jenkins-pv
          persistentVolumeClaim:
              claimName: jenkins-pv-claim
